Clean up navigation menu

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -23,6 +23,36 @@
     background-color: $text-color;
     color: $background-color;
   }
+
+  /* Site navigation style
+   * Remove to use hamburger menu for mobile
+   */
+  position: static;
+  float: right;
+  border: none;
+  background-color: inherit;
+
+  label[for="nav-trigger"] {
+    display: none;
+  }
+
+  .menu-icon {
+    display: none;
+  }
+
+  input ~ .trigger {
+    display: block;
+  }
+
+  .page-link {
+    display: inline;
+    padding: 0;
+
+    &:not(:last-child) {
+      margin-right: 20px;
+    }
+    margin-left: auto;
+  }
 }
 
 /* PDF display */
